fix footer spacing

--- a/proj_labbd/static/stylesheet/components/card.css
+++ b/proj_labbd/static/stylesheet/components/card.css
@@ -24,9 +24,7 @@
 	padding: 0.4rem;
 }
 
-.card-content h6,
-p {
-	margin: 0;
+.card-content > h6, p {
 	margin-bottom: 0.5rem;
 }
 
